--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -15,13 +15,10 @@ header.header
 			ul.header__logo-list
 				li.header__logo-list-elem
 					a.header__logo-list-link(href="#", target="_blank", rel="noreferrer")
-						img.header__logo-list-img(src="images/common/logo-mjr.svg", alt="Mjr")
+						img.header__logo-list-img(src="images/common/logo-major-squares.svg", alt="Major")
 				li.header__logo-list-elem
 					a.header__logo-list-link(href="#", target="_blank", rel="noreferrer")
-						img.header__logo-list-img(src="images/common/logo-major.png", alt="Major")
-				li.header__logo-list-elem
-					a.header__logo-list-link(href="#", target="_blank", rel="noreferrer")
-						img.header__logo-list-img(src="images/common/logo-map.png", alt="Map")
+						img.header__logo-list-img(src="images/common/logo-major-e.png", alt="Major")
 			p.header__text
 				a.header__phone(href="tel:84957376006") 8 (495) 737 60 06
 				|
@@ -47,7 +44,7 @@ header.header
 	.header__row
 		.header__nav-box.container
 			a.header__logo-link(href="/")
-				img.header__logo-img(src="images/common/logo-terminal.svg", alt="Major Terminal")
+				img.header__logo-img(src="images/common/logo-major-terminal.svg", alt="Major Terminal")
 			nav.header__nav
 				ul.header__nav-list
 					li.header__nav-elem
@@ -57,12 +54,17 @@ header.header
 					li.header__nav-elem
 						a.header__nav-link(href="#") Кейсы
 					li.header__nav-elem
-						a.header__nav-link(href="#") Наши терминалы
-					li.header__nav-elem
 						a.header__nav-link(href="#") Устойчивое развитие
 					li.header__nav-elem
 						a.header__nav-link(href="#") Пресс-релизы
 					li.header__nav-elem
+						a.header__nav-link(href="#") Карьера
+					li.header__nav-elem
+						a.header__nav-link(href="#") Терминалы
+					li.header__nav-elem
 						a.header__nav-link(href="#") О нас
 					li.header__nav-elem
 						a.header__nav-link(href="#") Контакты
+			a.header__button-enter(href="#")
+				img.header__button-enter-icon(src="images/common/logo-map.png", alt)
+				|Вход в MAP
