--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,3 +1,5 @@
+@import "elements/button-arrow";
+
 @import "blocks/header";
 @import "blocks/search-form";
 @import "blocks/dropdown";
@@ -20,6 +22,9 @@
 @import "blocks/about-gallery";
 @import "blocks/about-download";
 @import "blocks/timeline";
+@import "blocks/road";
+@import "blocks/simple-card";
+@import "blocks/simple-card-row";
 
 @import "sections/section-ready";
 @import "sections/section-nav";
