--- a/src/scss/components/blocks/_header.scss
+++ b/src/scss/components/blocks/_header.scss
@@ -18,13 +18,13 @@
 		flex-shrink: 0;
 		display: flex;
 		align-items: center;
-		margin: 0 -7px;
+		margin: 0 -11px;
 		list-style-type: none;
 		padding-left: 0;
 	}
 
 	&__logo-list-elem {
-		padding: 0 7px;
+		padding: 0 11px;
 	}
 
 	&__logo-list-link {
@@ -123,7 +123,6 @@
 	&__nav-box {
 		display: flex;
 		align-items: center;
-		padding-right: 147px;
 		height: 90px;
 	}
 
@@ -153,9 +152,9 @@
 		position: relative;
 		display: inline-block;
 		padding: 36px 8px;
-		font-family: $font-additional;
-		font-size: 18px;
-		line-height: 18px;
+		font-family: $font-secondary;
+		font-size: 22px;
+		line-height: 1px;
 		font-weight: 700;
 		color: $color-blue;
 		transition: color $transition-default;
@@ -188,5 +187,30 @@
 				opacity: 0;
 			}
 		}
+	}
+
+	&__button-enter {
+		display: inline-flex;
+		align-items: center;
+		font-family: $font-secondary;
+		padding: 12px 23px;
+		font-size: 22px;
+		line-height: 1;
+		font-weight: 700;
+		color: $color-orange;
+		border: 2px solid $color-orange;
+		border-radius: 30px;
+		transition: color $transition-default, border-color $transition-default;
+
+		&:hover {
+			color: $color-red;
+			border-color: $color-red;
+		}
+	}
+
+	&__button-enter-icon {
+		flex-shrink: 0;
+		width: 32px;
+		margin-right: 6px;
 	}
 }
