--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,13 +9,16 @@ $color-blue: #004996;
 $color-blue-medium: #00539F;
 $color-blue-light: #2B6BCD;
 $color-blue-light2: #2B6BCD;
+$color-blue-light3: #F2F6FA;
 
 $color-red: #E10000;
+$color-orange: #EC6759;
 
 
 // Fonts
 $font-primary: 'Roboto', sans-serif;
 $font-secondary: 'Roboto Condensed', sans-serif;
+$font-secondary2: 'Roboto Condensed Medium', sans-serif;
 $font-additional: 'Montserrat', sans-serif;
 
 // Transitions
