--- a/src/scss/components/blocks/_button.scss
+++ b/src/scss/components/blocks/_button.scss
@@ -176,10 +176,10 @@
 	}
 
 	&--lg {
-		padding: 29px 40px;
-		font-family: $font-primary;
-		font-size: 20px;
-		line-height: 22px;
+		padding: 27px 40px;
+		font-family: $font-secondary;
+		font-size: 24px;
+		line-height: 24px;
 		font-weight: 700;
 	}
 
