--- a/src/scss/components/blocks/_form-control.scss
+++ b/src/scss/components/blocks/_form-control.scss
@@ -1,12 +1,12 @@
 .form-control {
-	border: 1px solid $color-blue;
-	padding: 19px 23px;
-	border-radius: 10px;
-	font-size: 14px;
+	padding: 17px 23px;
+	font-family: $font-secondary;
+	font-size: 18px;
 	line-height: 18px;
-	font-weight: 700;
 	background-color: $color-white;
-	transition: background-color $transition-default;
+	border-radius: 10px;
+	border: 1px solid #C5E0F2;
+	transition: border-color $transition-default;
 
 	&--round {
 		border: none;
@@ -22,12 +22,12 @@
 	}
 
 	&::placeholder {
-		color: #7A797A;
+		color: $color-black;
 	}
 
 	&:focus {
 		outline: none;
-		background-color: #DDE5EC;
+		border-color: $color-blue;
 	}
 
 	&--textarea {
