--- a/src/scss/components/blocks/_tabs.scss
+++ b/src/scss/components/blocks/_tabs.scss
@@ -25,7 +25,7 @@
 
 	&__nav-list {
 		display: inline-flex;
-		margin: 0 -18px;
+		margin: 0 -24px;
 		padding-left: 0;
 		list-style-type: none;
 
@@ -49,7 +49,7 @@
 	}
 
 	&__nav-elem {
-		padding: 0 18px;
+		padding: 0 24px;
 
 		.tabs--blue & {
 			flex-grow: 1;
@@ -63,13 +63,13 @@
 
 	&__nav-button {
 		position: relative;
-		padding: 0 0 22px;
+		padding: 0 0 20px;
 		border: none;
 		background-color: $color-transparent;
-		font-family: $font-secondary;
+		font-family: $font-secondary2;
 		font-size: 50px;
 		line-height: 50px;
-		font-weight: 300;
+		font-weight: 500;
 		color: #7A797A;
 		text-align: center;
 		transition: font-weight $transition-default, color $transition-default;
@@ -94,6 +94,7 @@
 		}
 
 		&--active {
+			font-family: $font-secondary;
 			font-weight: 700;
 			color: $color-blue;
 
