--- a/src/scss/components/sections/_section-services.scss
+++ b/src/scss/components/sections/_section-services.scss
@@ -19,11 +19,65 @@
 		margin: 0;
 	}
 
-	&__nav {
-	}
-
 	&__title-btn {
 		width: 100%;
 		max-width: 176px;
+	}
+
+	&__row {
+		display: grid;
+		grid-template-columns: repeat(8, 1fr);
+		grid-template-rows: auto;
+	}
+
+	&__link {
+		position: relative;
+		display: inline-block;
+		text-align: center;
+		padding-bottom: 16px;
+		color: #5B5B5B;
+
+		&::after {
+			position: absolute;
+			bottom: 0;
+			left: 50%;
+			width: 100%;
+			max-width: 64px;
+			height: 3px;
+			border-radius: 3px;
+			background-color: $color-red;
+			content: "";
+			opacity: 0;
+			transform: translateX(-50%) scaleX(0);
+			transition: transform $transition-default, opacity $transition-default;
+		}
+
+		&:hover {
+			&::after {
+				transform: translateX(-50%);
+				opacity: 1;
+			}
+		}
+	}
+
+	&__icon-box {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 102px;
+		height: 102px;
+		margin: 0 auto 20px;
+	}
+
+	&__icon {
+		max-width: 100%;
+	}
+
+	&__link-title {
+		margin: 0;
+		font-family: $font-secondary2;
+		font-weight: 500;
+		font-size: 24px;
+		line-height: 24px;
 	}
 }
