--- a/src/scss/components/sections/_section-slider-terminal.scss
+++ b/src/scss/components/sections/_section-slider-terminal.scss
@@ -1,4 +1,36 @@
 .section-slider-terminal {
-	padding-top: 54px;
-	padding-bottom: 44px;
+	padding-top: 67px;
+	padding-bottom: 126px;
+
+	&__row {
+		display: grid;
+		grid-template-columns: 1fr 3fr;
+		grid-template-rows: auto;
+		grid-column-gap: 32px;
+	}
+
+	&__col {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: flex-start;
+	}
+
+	&__slider {
+		width: 100%;
+	}
+
+	&__title {
+		margin-top: 0;
+		margin-bottom: 40px;
+	}
+
+	&__text {
+		max-width: 300px;
+		margin-top: 0;
+		margin-bottom: 75px;
+		font-family: $font-secondary2;
+		font-size: 28px;
+		line-height: 1;
+	}
 }
