--- a/src/scss/typography/_fonts.scss
+++ b/src/scss/typography/_fonts.scss
@@ -180,3 +180,13 @@
 	url('../fonts/roboto-condensed/roboto-condensed-v25-cyrillic_latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
 	url('../fonts/roboto-condensed/roboto-condensed-v25-cyrillic_latin-700.svg#RobotoCondensed') format('svg'); /* Legacy iOS */
 }
+@font-face {
+	font-family: "Roboto Condensed Medium";
+	font-display: swap;
+	src: url("../fonts/roboto-condensed/roboto-condensed-medium.eot"); /* IE9*/
+	src: url("../fonts/roboto-condensed/roboto-condensed-medium.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+	url("../fonts/roboto-condensed/roboto-condensed-medium.woff2") format("woff2"), /* chrome、firefox */
+	url("../fonts/roboto-condensed/roboto-condensed-medium.woff") format("woff"), /* chrome、firefox */
+	url("../fonts/roboto-condensed/roboto-condensed-medium.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+	url("../fonts/roboto-condensed/roboto-condensed-medium.svg#Roboto Condensed Medium") format("svg"); /* iOS 4.1- */
+}
