Fix: simple card styles, all news button class

--- a/src/index.pug
+++ b/src/index.pug
@@ -204,7 +204,7 @@ block content
 							button.tabs__nav-button.tabs__nav-button--active(data-content="content1") Новости
 						li.tabs__nav-elem
 							button.tabs__nav-button(data-content="content2") Вебинары
-					a.button.button--outline-blue.button--sm(href="#") Все новости
+					a.button-arrow(href="#") Все новости
 				.tabs__content-box
 					// Content
 					.tabs__content.tabs__content--active#content1
