--- a/src/scss/components/blocks/_simple-card.scss
+++ b/src/scss/components/blocks/_simple-card.scss
@@ -18,8 +18,8 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-image: linear-gradient(90.25deg, rgba(225, 0, 0, 0.5) 12.82%, rgba(0, 73, 150, 0) 79.82%), url("data:image/svg+xml,%3Csvg width='77' height='158' viewBox='0 0 77 158' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13 145L61 79L13 13' stroke='white' stroke-width='25' stroke-linecap='round'/%3E%3C/svg%3E");
-		background-size: cover, 77px 158px;
+		background-image: url("data:image/svg+xml,%3Csvg width='77' height='158' viewBox='0 0 77 158' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13 145L61 79L13 13' stroke='white' stroke-width='25' stroke-linecap='round'/%3E%3C/svg%3E"), linear-gradient(90.25deg, rgba(225, 0, 0, 0.5) 12.82%, rgba(0, 73, 150, 0) 79.82%);
+		background-size: 77px 158px, cover;
 		background-position: center, center;
 		background-repeat: no-repeat, no-repeat;
 		content: "";
