Feat: change styles for 404 page

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -7,7 +7,7 @@ footer.footer
 				p.footer__nav-title Индустрии
 				ul.footer__nav-list
 					li.footer__nav-elem
-						a.footer__nav-link(href="#") Fashion
+						a.footer__nav-link.footer__nav-link--active(href="#") Fashion
 					li.footer__nav-elem
 						a.footer__nav-link(href="#") Telecom
 					li.footer__nav-elem
