--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -283,6 +283,7 @@ html(class=html.classList)&attributes(html.attrs)
 		include components/header
 		main
 			block content
+		include components/section-contacts
 		include components/footer
 		block scripts
 			script(src!=`${baseDir}js/vendor.js?v=${Date.now()}`)
