--- a/src/scss/components/blocks/_search-form.scss
+++ b/src/scss/components/blocks/_search-form.scss
@@ -3,6 +3,7 @@
 	align-items: center;
 	background-color: $color-white;
 	width: 100%;
+	box-shadow: 0 4px 30px rgba($color-blue-medium, .1);
 
 	&__row {
 		display: flex;
