--- a/src/scss/components/sections/_section-contacts.scss
+++ b/src/scss/components/sections/_section-contacts.scss
@@ -1,23 +1,23 @@
 .section-contacts {
 	position: relative;
 	z-index: 0;
-	padding-top: 98px;
+	padding-top: 116px;
+	padding-bottom: 64px;
 	background-color: $color-blue-light3;
 	overflow: hidden;
 
-	&--job {
-		padding-top: 50px;
-	}
-
 	&__row {
 		display: grid;
-		grid-template-columns: 1.35fr 1fr;
+		grid-template-columns: 1.55fr 1fr;
 		grid-template-rows: auto;
+		grid-column-gap: 90px;
 	}
 
+	&__form-box {}
+	&__img-box {}
+
 	&__img {
-		width: 111%;
-		transform: translate(-0.7%, -11.3%);
+		width: 100%;
 	}
 
 	&__title {
