Feat: change styles for Inductry list page

--- a/src/industry-list.pug
+++ b/src/industry-list.pug
@@ -15,86 +15,44 @@ block content
 	+breadcrumb(['Главная'], 'Индустрии')(class="container")
 
 	// Section Industries
-	section.section-industries.container
-		h1.h1.text-blue.section-industries__title Индустрии
-		p.section-industries__description Обладаем экспертизой в различных областях, что делает нас профессионалами.
-		.section-industries__grid
-			// Card
-			a.section-industries__card.section-industries__card--top.card.card--text-top(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title Fashion
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-ready/bg7.jpg", alt)
-			// Card
-			a.section-industries__card.section-industries__card--top-wide.card.card--text-top(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title Healthcare
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-ready/bg8.jpg", alt)
-			// Card
-			a.section-industries__card.section-industries__card--top.card.card--text-top(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title Automotive
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-ready/bg3.jpg", alt)
-			// Card
-			a.section-industries__card.section-industries__card--bottom-wide.card.card--text-top(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title FMCG
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-ready/bg4.jpg", alt)
-			// Card
-			a.section-industries__card.section-industries__card--bottom.card.card--text-top(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title Telecom
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-ready/bg5.jpg", alt)
-			// Card
-			a.section-industries__card.section-industries__card--bottom-wide.card.card--text-top(href="#")
-				.card__text-box
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-					p.card__text Наши решения адаптированы для индустрии Beauty&Luxury. Безопасность, устойчивость и гибкость при работе c маршрутами выхода на рынок — наши главные приоритеты, способствующие изменениям в цепочке поставок.
-				.card__title-box
-					p.card__title POSM
-				span.button.button--white.button--xs.card__btn-more Подробнее
-				.card__bg-box
-					img.card__bg(src="images/section-ready/bg9.jpg", alt)
-
-	// Section Invite
-	.section-invite
+	section.section-industries.road
 		.container
-			.section-invite__row
-				.section-invite__col
-					// Card
-					a.section-invite__card(href="#")
-						.section-invite__card-content
-							p.section-invite__card-title Вебинары
-							p.section-invite__card-text Познакомьтесь с современными тенденциями складской деятельности в режиме онлайн
-						+svg("chevron-right-big")(class="section-invite__card-arrow")
-				.section-invite__col
-					// Card
-					a.section-invite__card(href="#")
-						.section-invite__card-content
-							p.section-invite__card-title Наши кейсы
-							p.section-invite__card-text Изучите наш опыт в сфере складской логистики и получите похожее решение
-						+svg("chevron-right-big")(class="section-invite__card-arrow")
-
-
-
+			h1.h1.text-blue.section-industries__title Индустрии
+			p.section-industries__description Обладаем экспертизой в различных областях, что делает нас профессионалами.
+			.section-industries__grid
+				// Card
+				a.section-industries__card.section-industries__card--top-wide.simple-card(href="#")
+					.simple-card__title-box
+						p.simple-card__title Fashion
+					.simple-card__bg-box
+						img.simple-card__bg(src="images/section-ready/bg7.jpg", alt)
+				// Card
+				a.section-industries__card.section-industries__card--top.simple-card(href="#")
+					.simple-card__title-box
+						p.simple-card__title FMCG
+					.simple-card__bg-box
+						img.simple-card__bg(src="images/section-ready/bg4.jpg", alt)
+				// Card
+				a.section-industries__card.section-industries__card--top-wide.simple-card(href="#")
+					.simple-card__title-box
+						p.simple-card__title Automotive
+					.simple-card__bg-box
+						img.simple-card__bg(src="images/section-ready/bg3.jpg", alt)
+				// Card
+				a.section-industries__card.section-industries__card--bottom.simple-card(href="#")
+					.simple-card__title-box
+						p.simple-card__title Telecom
+					.simple-card__bg-box
+						img.simple-card__bg(src="images/section-ready/bg5.jpg", alt)
+				// Card
+				a.section-industries__card.section-industries__card--bottom-wide.simple-card(href="#")
+					.simple-card__title-box
+						p.simple-card__title Healthcare
+					.simple-card__bg-box
+						img.simple-card__bg(src="images/section-ready/bg8.jpg", alt)
+				// Card
+				a.section-industries__card.section-industries__card--bottom.simple-card(href="#")
+					.simple-card__title-box
+						p.simple-card__title POSM
+					.simple-card__bg-box
+						img.simple-card__bg(src="images/section-ready/bg9.jpg", alt)
