--- a/src/scss/components/blocks/_road.scss
+++ b/src/scss/components/blocks/_road.scss
@@ -9,13 +9,13 @@
 		position: absolute;
 		z-index: -1;
 		top: 0;
-		right: -30px;
+		right: 0;
 		width: 100%;
 		height: 100%;
 		background-image: url("../images/road-bg/road1.svg");
 		background-repeat: no-repeat;
 		background-size: contain;
-		background-position: center;
+		background-position: top center;
 		content: "";
 	}
 
