--- a/src/scss/components/sections/_section-industries.scss
+++ b/src/scss/components/sections/_section-industries.scss
@@ -1,6 +1,6 @@
 .section-industries {
-	padding-top: 20px;
-	padding-bottom: 60px;
+	padding-top: 16px;
+	padding-bottom: 97px;
 
 	&__title {
 		margin-top: 0;
@@ -9,9 +9,9 @@
 
 	&__description {
 		margin-top: 0;
-		margin-bottom: 38px;
-		font-family: $font-secondary;
-		font-size: 16px;
+		margin-bottom: 45px;
+		font-family: $font-secondary2;
+		font-size: 24px;
 		line-height: 32px;
 		font-weight: 500;
 	}
@@ -19,12 +19,14 @@
 	&__grid {
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
-		grid-column-gap: 32px;
-		grid-template-rows: auto 74px auto;
-		grid-row-gap: 48px;
+		grid-column-gap: 45px;
+		grid-template-rows: auto 178px auto;
+		grid-row-gap: 58px;
 	}
 
 	&__card {
+		min-height: 272px;
+
 		&--top {
 			grid-row: 1;
 		}
