--- a/src/industry-list.pug
+++ b/src/industry-list.pug
@@ -25,34 +25,34 @@ block content
 					.simple-card__title-box
 						p.simple-card__title Fashion
 					.simple-card__bg-box
-						img.simple-card__bg(src="images/section-ready/bg7.jpg", alt)
+						img.simple-card__bg(src="images/common/bg1.jpg", alt)
 				// Card
 				a.section-industries__card.section-industries__card--top.simple-card(href="#")
 					.simple-card__title-box
 						p.simple-card__title FMCG
 					.simple-card__bg-box
-						img.simple-card__bg(src="images/section-ready/bg4.jpg", alt)
+						img.simple-card__bg(src="images/common/bg2.jpg", alt)
 				// Card
 				a.section-industries__card.section-industries__card--top-wide.simple-card(href="#")
 					.simple-card__title-box
 						p.simple-card__title Automotive
 					.simple-card__bg-box
-						img.simple-card__bg(src="images/section-ready/bg3.jpg", alt)
+						img.simple-card__bg(src="images/common/bg3.jpg", alt)
 				// Card
 				a.section-industries__card.section-industries__card--bottom.simple-card(href="#")
 					.simple-card__title-box
 						p.simple-card__title Telecom
 					.simple-card__bg-box
-						img.simple-card__bg(src="images/section-ready/bg5.jpg", alt)
+						img.simple-card__bg(src="images/common/bg4.jpg", alt)
 				// Card
 				a.section-industries__card.section-industries__card--bottom-wide.simple-card(href="#")
 					.simple-card__title-box
 						p.simple-card__title Healthcare
 					.simple-card__bg-box
-						img.simple-card__bg(src="images/section-ready/bg8.jpg", alt)
+						img.simple-card__bg(src="images/common/bg5.jpg", alt)
 				// Card
 				a.section-industries__card.section-industries__card--bottom.simple-card(href="#")
 					.simple-card__title-box
 						p.simple-card__title POSM
 					.simple-card__bg-box
-						img.simple-card__bg(src="images/section-ready/bg9.jpg", alt)
+						img.simple-card__bg(src="images/common/bg6.jpg", alt)
